inherit from baseimage

--- a/input/test.tex
+++ b/input/test.tex
@@ -14,12 +14,12 @@
 
 \renewcommand{\headrulewidth}{0pt}
 \setmainfont[
-    Path           = /var/lib/data/fonts/,
+    Path           = /var/lib/data/assets/fonts/,
     Extension      = .otf,
     SlantedFont    = HelveticaNeueLTPro-It
-]{HelveticaNeueLTPro-Roman}
+]{HelveticaNeueLTPro-Th}
 
-\chead{\includegraphics[height=40pt]{logo}}
+\chead{\includegraphics[height=40pt]{assets/Engine}}
 
 \begin{document}
 This is a test.
