--- a/input/test.tex
+++ b/input/test.tex
@@ -16,25 +16,84 @@
 \setmainfont[
     Path           = /var/lib/data/assets/fonts/,
     Extension      = .otf,
-    SlantedFont    = HelveticaNeueLTPro-It
+    SlantedFont    = HelveticaNeueLTPro-ThIt,
+    ItalicFont     = HelveticaNeueLTPro-It,
+    BoldFont       = HelveticaNeueLTPro-Bd
 ]{HelveticaNeueLTPro-Th}
 
 \chead{\includegraphics[height=40pt]{assets/Engine}}
 
 \begin{document}
-This is a test.
-Does this use ligatures: fififi?
-And this: árvíztűrő tükörfúrógép.
-Some filler text. Some filler text. Some filler text. Some filler text.
-Some filler text. Some filler text. Some filler text. Some filler text.
-Some filler text. Some filler text. Some filler text. Some filler text.
-Some filler text. Some filler text. Some filler text. Some filler text.
-Some filler text. Some filler text. Some filler text. Some filler text.
-Some filler text. Some filler text. Some filler text. Some filler text.
-Some filler text. Some filler text. Some filler text. Some filler text.
-Some filler text. Some filler text. Some filler text. Some filler text.
-Some filler text. Some filler text. Some filler text. Some filler text.
-Some filler text. Some filler text. Some filler text. Some filler text.
-Some filler text. Some filler text. Some filler text. Some filler text.
+
+This is a test. Ligatures (?): fi ff fl ffi ffl.
+({f}{i} {f}{f} {f}{l} {f}{f}{i} {f}{f}{l})
+árvíztűrő tükörfúrógép, ÁRVÍZTŰRŐ TÜKÖRFÚRÓGÉP.
+\'arv\'izt\H{u}r\H{o} t\"uk\"orf\'ur\'og\'ep.
+
+Lorem ipsum dolor sit amet, ex vim vivendum reprimique.
+Ex qui dico populo bonorum, ea assum tamquam numquam cum.
+Errem dolorum ea eum, nec no meis equidem habemus.
+Qui et mentitum maluisset assueverit, utamur invidunt recteque per ut,
+sea maiorum commune no. Ne oporteat corrumpit nam. Saepe gubergren an pri,
+iudico alterum lobortis vix te. Tritani sanctus sit eu,
+et eam veri error aeterno, oratio virtute suscipiantur has ea.
+
+Regione delicata ea eum, te vide malorum voluptatum sea,
+vis ut propriae conceptam signiferumque. Esse choro te ius,
+et sed affert corpora incorrupte. Nec dicat mnesarchum vituperata id,
+vis te menandri efficiantur, his no aeque harum. Vitae epicurei
+laboramus has ex, sed eu consulatu constituto. Ex dicat utinam
+scribentur vis, sumo omittam corrumpit ex per.
+
+Vocibus dissentias in quo. Molestiae hendrerit rationibus cum in.
+Ex mei eripuit consequuntur, sed ut oblique eleifend conclusionemque.
+In phaedrum incorrupte nec.
+
+\TeX\ logo, and some text. Id eos essent corrumpit accommodare,
+qui eu tempor invidunt aliquando, sit veritus facilisis reformidans ex.
+Altera suscipit accusamus his in, odio iusto accusam eam no.
+Cu sea congue homero lobortis. Eruditi vocibus convenire usu te.
+An sit sint commodo petentium. Cum enim menandri cu, ut nec purto
+malorum phaedrum, ius ex quod aeterno delicatissimi.
+
+In his propriae cotidieque, his ridens lucilius reprehendunt id.
+Ut sonet alienum eos, quot vidit explicari ad sed.
+At qui vero theophrastus, ei sonet graeci quo. Et justo hendrerit vim.
+An congue suscipiantur nam, per at novum tantas,
+cetero tincidunt definitionem vix an.
+
+\centerline{Experiment with {\sl slanted\/}, {\it italic\/}, {\bf bold} types.}
+
+Even more text.
+
+\hrule
+\vskip 1in
+\centerline{\bf A SHORT STORY}
+\vskip 6pt
+\centerline{\sl by A. U. Thor}
+\vskip .5cm
+Once upon a time, in a distant
+galaxy called \"O\"o\c c,
+there lived a computer
+named R.~J. Drofnats.
+
+Mr.~Drofnats---or ‘‘R. J.,’’ as
+he preferred to be called---
+was happiest when he was at work
+typesetting beautiful documents.
+\vskip 1in
+\hrule
+
+\vskip 3cm
+\noindent
+\rule{4cm}{0.4pt}\kern-3.5cm\lower.75em\hbox{\includegraphics[width=3cm]{assets/lips}}\kern.5cm
+
+\rlap{\rule{4cm}{0.4pt}}{\includegraphics[width=3cm]{assets/lips}}
+
+\rule{4cm}{0.4pt}{\includegraphics[width=3cm]{assets/lips}}
+
+What happens after this? In his propriae cotidieque, his ridens lucilius
+reprehendunt id.
+Ut sonet alienum eos, quot vidit explicari ad sed.
 
 \end{document}
